@@ -1,7 +1,7 @@
 {
   "name": "Inventory Checker",
   "icon": "rftoolsutility:invchecker",
-  "category": "rftoolsutility:category_rftoolsutility_logic",
+  "category": "rftoolsbase:category_rftoolsutility_logic",
   "pages": [
     {
       "type": "text",
