@@ -1,7 +1,7 @@
 {
   "name": "Redstone Receiver",
   "icon": "rftoolsutility:redstone_receiver",
-  "category": "rftoolsutility:category_rftoolsutility_logic",
+  "category": "rftoolsbase:category_rftoolsutility_logic",
   "pages": [
     {
       "type": "text",
