@@ -1,7 +1,7 @@
 {
   "name": "Dialing Device",
   "icon": "rftoolsutility:dialing_device",
-  "category": "rftoolsutility:category_rftoolsutility_machines",
+  "category": "rftoolsbase:category_rftoolsutility_machines",
   "pages": [
     {
       "type": "text",
